--- a/source/sass/components/contacts.scss
+++ b/source/sass/components/contacts.scss
@@ -33,6 +33,10 @@
 
   @media (min-width: $desktop-width) {
     width: 50%;
+    font-size: 50px;
+    line-height: 59px;
+    padding-left: 38px;
+    padding-top: 20px;
   }
 }
 
@@ -45,6 +49,10 @@
 
   @media (min-width: $tablet-width) {
     margin-bottom: 3px;
+  }
+
+  @media (min-width:  $desktop-width) {
+        margin-bottom: 21px;
   }
 }
 
@@ -65,6 +73,9 @@
 
   @media (min-width: $desktop-width) {
     flex-wrap: nowrap;
+    margin-right: 40px;
+    margin-left: 40px;
+    width: 960px;
   }
 }
 
@@ -76,7 +87,7 @@
   line-height: 32px;
 
   @media (min-width: $tablet-width) {
-    line-height: 27px;
+    line-height: 28px;
   }
 }
 
@@ -93,6 +104,12 @@
     margin-bottom: 43px;
     padding: 0;
   }
+
+  @media (min-width: $desktop-width) {
+    order: 1;
+    margin-right: 16px;
+    margin-top: 14px;
+  }
 }
 
 .contacts__info--address {
@@ -102,10 +119,28 @@
     padding-right: 39px;
     padding-top: 3px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 40px;
+    padding-right: 44px;
+    padding-top: 1px;
+  }
 }
 
 .contacts__item--address {
   @media (min-width: $tablet-width) {
-    margin-bottom: -3px;
+    margin-bottom: -6px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 17px;
+    margin-top: 14px;
+
+  }
+}
+
+.contacts__item--email {
+  @media (min-width: $desktop-width) {
+    order: 2;
   }
 }
