--- a/source/sass/components/site-list.scss
+++ b/source/sass/components/site-list.scss
@@ -28,15 +28,18 @@
   @media (min-width: $desktop-width) {
     border: none;
     background-color: transparent;
+    text-transform: capitalize;
+    letter-spacing: 0;
   }
 }
 
 .site-list__item {
   @media (min-width: $desktop-width) {
     font-size: 18px;
-    padding-right: 5px;
     line-height: 18px;
     font-weight: 300;
+    padding-right: 5px;
+    padding-left: 0px;
   }
 }
 
