--- a/source/sass/components/analysis.scss
+++ b/source/sass/components/analysis.scss
@@ -4,6 +4,10 @@
   @media (min-width: $tablet-width) {
     display: block;
   }
+
+  @media (min-width: $desktop-width) {
+    background-color: #f2f2f2;
+  }
 }
 
 .analysis__name {
@@ -18,6 +22,7 @@
 
   @media (min-width: $desktop-width) {
     line-height: 30px;
+    width: 320px;
   }
 }
 
@@ -33,6 +38,10 @@
   @media (min-width: $desktop-width) {
     font-size: 18px;
     line-height: 30px;
+    padding-top: 15px;
+    width: 518px;
+    padding-bottom: 20px;
+
   }
 }
 
@@ -42,6 +51,11 @@
   text-decoration: underline;
   color: $light-red;
   margin-right: 71px;
+
+  @media (min-width: $desktop-width) {
+    font-size: 18px;
+    line-height: 30px;
+  }
 }
 
 .analysis__item {
@@ -51,14 +65,32 @@
   width: 660px;
   margin: 0 auto;
   margin-top: -1px;
+
+  @media (min-width: $desktop-width) {
+    width: 960px;
+  }
 }
 
 .analysis__svg {
   height: 280px;
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    height: 345px;
+    left: 2px;
+    bottom: 67px;
+  }
 }
 
 .analysis__item--wrapper {
   margin-left: 48px;
   padding-right: 35px;
   margin-top: 38px;
+
+  @media (min-width: $desktop-width) {
+    margin-left: 42px;
+    margin-top: 62px;
+    margin-bottom: 114px;
+
+  }
 }
