--- a/source/sass/components/available-list.scss
+++ b/source/sass/components/available-list.scss
@@ -14,6 +14,13 @@
     margin-left: 18px;
     margin-bottom: 30px;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 0;
+    margin-top: 29px;
+    margin-right: 2px;
+    margin-bottom: 49px;
+  }
 }
 
 .available-list__item {
