--- a/source/sass/components/comment.scss
+++ b/source/sass/components/comment.scss
@@ -11,6 +11,7 @@
 
   @media (min-width: $desktop-width) {
     font-size: 24px;
+    padding-left: 9px;
   }
 }
 
@@ -34,6 +35,7 @@
 
   @media (min-width: $desktop-width) {
     font-size: 18px;
+    padding-right: 20px;
   }
 }
 
@@ -51,7 +53,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 92%;
+    width: 90%;
+    padding-right: 17px;
   }
 }
 
@@ -64,6 +67,7 @@
   @media (min-width: $tablet-width) {
     flex-direction: column-reverse;
     padding-top: 19px;
+    position: relative;
   }
 }
 
@@ -74,6 +78,11 @@
   @media (min-width: $tablet-width) {
     padding-top: 63px;
     padding-bottom: 67px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 153px;
+    padding-bottom: 30px;
   }
 }
 
@@ -89,6 +98,24 @@
     top: 91%;
     left: 44%;
   }
+
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
+}
+
+.comment__list::before {
+  @media (min-width: $desktop-width) {
+
+    position: absolute;
+    width: 80px;
+    height: 70px;
+    background: url(../img/icon-quotes.svg) no-repeat scroll 50% 50%;
+    content: "";
+    opacity: 0.1;
+    top: -83px;
+    left: 395px;
+  }
 }
 
 .comment__wrapper {
@@ -98,4 +125,34 @@
   @media (min-width: $tablet-width) {
     padding-top: 37px;
   }
+}
+
+.comment__slider-arrow {
+  display: none;
+
+  @media (min-width: $desktop-width) {
+    display: block;
+  }
+}
+
+.comment__slider-left {
+  @media (min-width: $desktop-width) {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 211px;
+  left: -5px;
+  opacity: 0.1;    }
+}
+
+.comment__slider-right {
+  @media (min-width: $desktop-width) {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 212px;
+  right: 12px;
+  opacity: 0.1;
+
+   }
 }
