--- a/source/sass/components/page-footer.scss
+++ b/source/sass/components/page-footer.scss
@@ -16,7 +16,9 @@
 
   @media (min-width: $desktop-width) {
     min-width: 940px;
-    padding: 0 40px;
+    padding: 0;
+    padding-top: 51px;
+    padding-left: 2px;
   }
 }
 
@@ -43,6 +45,10 @@
     margin-top: 21px;
     margin-right: -7px;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-right: 11px
+  }
 }
 
 .page-footer__logo-developers {
@@ -58,4 +64,9 @@
   box-sizing: border-box;
   padding-left: 5px;
   padding-top: 1px;
+
+  @media (min-width: $desktop-width) {
+        font-size: 18px;
+    line-height: 18px;
+  }
 }
