--- a/source/sass/components/page-header.scss
+++ b/source/sass/components/page-header.scss
@@ -12,6 +12,7 @@
 
   &--open {
     background-color: $dark-blue;
+    position: static;
   }
 
   @media (min-width: $tablet-width) {
@@ -48,9 +49,12 @@
     padding-left: 72px;
   }
 
-  @media (min-width:  $desktop-width) {
-    padding-top: 21px;
-    padding-left: 181px;
+  @media (min-width: $desktop-width) {
+    padding-top: 3px;
+    margin-top: 6px;
+    margin-bottom: -1px;
+    margin-left: 92px;
+
 
   }
 }
@@ -60,6 +64,7 @@
     display: flex;
     align-items: center;
     box-sizing: border-box;
+    padding-top: 14px;
   }
 }
 
