--- a/source/sass/components/price.scss
+++ b/source/sass/components/price.scss
@@ -27,6 +27,7 @@
   @media (min-width: $desktop-width) {
     display: block;
     width: 100%;
+    padding-bottom: 95px;
   }
 }
 
@@ -38,6 +39,11 @@
   @media (min-width: $tablet-width) {
     transform: none;
     margin-left: 4px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 73px;
+    width: 942px;
   }
 }
 
@@ -68,6 +74,8 @@
   @media (min-width: $desktop-width) {
     font-size: 18px;
     height: 100px;
+    padding-top: 0px;
+    padding-left: 7px;
   }
 }
 
@@ -79,6 +87,11 @@
 
   @media (min-width: $tablet-width) {
     font-size: 18px;
+  }
+
+  @media (min-width: $desktop-width) {
+    font-size: 24px;
+    line-height: 30px;
   }
 }
 
@@ -102,6 +115,11 @@
     top: 2px;
     left: 6px;
   }
+
+  @media (min-width: $desktop-width) {
+    top: 10px;
+    left: 11px;
+  }
 }
 
 .price__name--hit::after {
@@ -122,6 +140,14 @@
     left: -41px;
     width: 28px;
     height: 29px;
+    border-width: 27px;
+  }
+
+  @media (min-width: $desktop-width) {
+    top: -60px;
+    left: -54px;
+    width: 44px;
+    height: 57px;
     border-width: 27px;
   }
 }
@@ -149,7 +175,12 @@
   }
 
   @media (min-width: $desktop-width) {
+    padding-bottom: 0;
+    padding-bottom: 7px;
     font-size: 18px;
+    width: 100px;
+    height: 60px;
+    padding-left: 20px;
   }
 }
 
@@ -160,6 +191,10 @@
   line-height: 30px;
   border: 2px solid #e5e5e5;
   width: 145px;
+
+  @media (min-width: $desktop-width) {
+    width: 158px;
+  }
 }
 
 .price__row--settings {
@@ -211,6 +246,11 @@
     top: 9px;
     right: 59px;
   }
+
+  @media (min-width: $desktop-width) {
+    top: 18px;
+    right: 102px;
+  }
 }
 
 .price__svg--off {
@@ -218,6 +258,11 @@
 
   @media (min-width: $tablet-width) {
     right: 61px;
+  }
+
+  @media (min-width: $desktop-width) {
+    top: 16px;
+    right: 102px;
   }
 }
 
@@ -242,4 +287,8 @@
 .price {
   position: relative;
   padding-top: 88px;
+
+  @media (min-width: $desktop-width) {
+    padding-top: 157px;
+  }
 }
